# REP-CURS

./: .env.example  .gitignore  .replit  CLIENT-SIDE-CODE-GUIDE.md  CLIENT-SIDE-RENDERING.md  FORM_FIXES_DOCUMENTATION.md  MAKE_INTEGRATION_GUIDE.md  MIGRATION-COMPLETE.md  MIGRATION-GUIDE.md  MIGRATION-REPORT.md  PORT-5000-README.md  PROGRESS-REPORT.md  README-PORT-5000.md  README.md  REPLIT-PORT-SOLUTION.md  REPLIT-SOLUTION.md  REPLIT-WORKFLOW-GUIDE.md  REPLIT-WORKFLOW-SOLUTION.md  SUPABASE-MIGRATION-STEPS.md  add_azimut_yacht.js  add_express_yacht.js  adventures.json  adventures_output.json  apply-migration-directly.js  apply-supabase-migration.js  categorized_blog_posts.json  check-connections.js  check-deps.js  check-json-fields.js  check-supabase-migration.js  check-supabase-tables.js  check-supabase.js  check-tables-direct.js  check-tables.js  combined-start.js  combined-starter.js  complete-migration.js  create-direct-tables.js  create-exec-sql-function.js  create-exec-sql.js  (+170 more)
api/: airtable_connector.py  main.py  start.sh
attached_assets/: # To-do app in Python.py  CABO VILLAS LIST.csv  Pasted--52-624-174-3459-tel-52-624-174-3459-Catamaran-for-rent-in-cabo-san-lucas-jpg-https-st-1746293156308.txt  Pasted--BLACK-YACHT-IN-CABO-https-static-wixstatic-com-media-34140b-0b32732b46ab4d0a963914d887822-1746238745167.txt  Pasted--EA-RAY-SUNDANCER-45-The-Sea-Ray-Sundancer-45ft-yacht-is-the-ideal-vessel-for-your-next-adventure-i-1746238205048.txt  Pasted--STEP-BY-STEP-Migrate-Neon-Supabase-using-Replit-GitHub-STEP-1-Export-your-Neon-database--1743881776472.txt  full list.csv  (+29 more)
(+376 files in other folders)
